//
// Copyright 2017, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.base;

option (type_url_prefix) = "type.spine3.org";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "FailureProto";
option java_package = "org.spine3.base";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

import "spine/annotations.proto";
import "spine/validate.proto";
import "spine/base/command.proto";
import "spine/base/enrichment.proto";
import "spine/base/version.proto";

// Failure identifier.
message FailureId {
    string uuid = 1;
}

// A business failure is a condition in business, which does not allow to
// satisfy a request or perform an operation.
//
// Examples: unsuccessful credit card validation, insufficient items in stock, incomplete order data.
//
// See `spine.base.Error` for definition of a technical error.
//
message Failure {

    // The instance of the failure message generated by an aggregate or
    // another part of the business logic code.
    google.protobuf.Any message = 1 [(required) = true];

    // The context of the failure.
    FailureContext context = 3;
}

// Meta-information for a failure.
message FailureContext {

    // The ID of the failure.
    FailureId failure_id = 1 [(required) = true];

    // The moment when the failure message (not this message) was created.
    google.protobuf.Timestamp timestamp = 2 [(required) = true];

    // The command which generated the failure.
    Command command = 3 [(required) = true];

    // The ID of the entity which generated the failure.
    google.protobuf.Any producer_id = 4 [(required) = true];

    // The version of the entity which generated the failure.
    Version version = 5 [(required) = true];

    // A stacktrace of from the code, which generated the failure message (if available).
    string stacktrace = 6;

    // Optional enrichment of the failure.
    Enrichment enrichment = 7;
}
